Fix unmounting large disks when not asked to

udisks2 was "Cleaning up mount point" claiming the device no longer existed.
Disk size may be larger than INT_MAX for large disks.

https://bugs.freedesktop.org/show_bug.cgi?id=48155

Signed-off-by: David Zeuthen <davidz@redhat.com>